--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-image: url('./src/assets/smirrinikkbg.png');"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
